--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ a {
   color: white !important;
 }
 
-.category-btn:hover span{
+.category-btn:hover{
   color: white !important;
 }
 .player-layout{
@@ -66,11 +66,14 @@ a {
 }
 
 .sidebar{
-  width: 225px;
+  width: 180px;
 }
 
 .video-card{
-  width: 320px;
+  width: 310px;
+}
+.card-img{
+  height: 180px;
 }
 .video-layout{
   width: 100%;
@@ -80,8 +83,10 @@ a {
     margin: 10px;
   }
   .video-card{
-    width: 90%;
-    margin: 2rem;
+    width: 100%;
+  }
+  .card-img{
+    height: 240px;
   }
   .player-layout{
     margin: 0;
@@ -91,6 +96,9 @@ a {
     flex-direction: column;
     align-items: center;
   }
+  .search-bar{
+    width: 130px;
+  }
 }
 
 @media screen and (max-width:800px){
@@ -99,7 +107,7 @@ a {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 601px) {
   .scroll-horizontal {
     overflow: auto !important;
   }
@@ -112,7 +120,7 @@ a {
   .react-player {
     height: 45vh !important;
   }
-  .search-bar{
-    width: 150px;
+  .card-img{
+    height: 220px;
   }
 }
